docs(message): added documentation for deleteMessage handler
